[gd_scene load_steps=26 format=3 uid="uid://hsjuocp3ilb4"]

[ext_resource type="Script" path="res://level/player/Player.gd" id="1_ii644"]
[ext_resource type="Texture2D" uid="uid://uivjlcofhaxb" path="res://asset/sprites/player.png" id="2_1h11w"]
[ext_resource type="Script" path="res://level/player/Camera2D.gd" id="5_phs5o"]
[ext_resource type="Shader" path="res://asset/shader/extern/speed_lines.gdshader" id="6_kkdul"]
[ext_resource type="PackedScene" uid="uid://bjibcolu08tat" path="res://ui/LevelUI.tscn" id="7_ag5j1"]
[ext_resource type="PackedScene" uid="uid://c1x3k7val2sjc" path="res://level/items/key/key.tscn" id="7_utnci"]
[ext_resource type="Texture2D" uid="uid://csdinvljutfqi" path="res://level/player/enemy-deadth.png" id="8_b8dw4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j0hqa"]
size = Vector2(14, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wmf5s"]
size = Vector2(14, 14)

[sub_resource type="Animation" id="Animation_ipp55"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1h11w")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ie8ns"]
resource_name = "cherry_power"
length = 0.6
loop_mode = 1

[sub_resource type="Animation" id="Animation_1y1q2"]
resource_name = "climb"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_xvkto"]
resource_name = "crawl"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [19, 20]
}

[sub_resource type="Animation" id="Animation_mhakw"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1h11w")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_ovplh"]
resource_name = "jump"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [30, 31]
}

[sub_resource type="Animation" id="Animation_lbjts"]
resource_name = "run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1h11w")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 11]
}

[sub_resource type="Animation" id="Animation_0wbum"]
resource_name = "stomp"
length = 0.5

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qmt4m"]
_data = {
"RESET": SubResource("Animation_ipp55"),
"cherry_power": SubResource("Animation_ie8ns"),
"climb": SubResource("Animation_1y1q2"),
"crawl": SubResource("Animation_xvkto"),
"idle": SubResource("Animation_mhakw"),
"jump": SubResource("Animation_ovplh"),
"run": SubResource("Animation_lbjts"),
"stomp": SubResource("Animation_0wbum")
}

[sub_resource type="Animation" id="Animation_cromc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("stompSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/doorEffect:material:shader_parameter/mask_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D/doorEffect:material:shader_parameter/mask_edge")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_hiwpe"]
resource_name = "cherry_power"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 0.431373, 1), Color(1, 0.372549, 0.431373, 1), Color(1, 1, 0.431373, 1)]
}

[sub_resource type="Animation" id="Animation_biknn"]
resource_name = "door"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D/doorEffect:material:shader_parameter/mask_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.5, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/doorEffect:material:shader_parameter/mask_edge")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.5]
}

[sub_resource type="Animation" id="Animation_4fhvk"]
resource_name = "stomp"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("stompSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q156b"]
_data = {
"RESET": SubResource("Animation_cromc"),
"cherry_power": SubResource("Animation_hiwpe"),
"door": SubResource("Animation_biknn"),
"stomp": SubResource("Animation_4fhvk")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wjvgj"]
shader = ExtResource("6_kkdul")
shader_parameter/line_color = null
shader_parameter/line_count = 0.5
shader_parameter/line_density = 0.5
shader_parameter/line_faloff = 0.25
shader_parameter/mask_size = 0.5
shader_parameter/mask_edge = 1.0
shader_parameter/animation_speed = 0.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vpooe"]

[node name="Player" type="CharacterBody2D"]
position = Vector2(0, -6)
script = ExtResource("1_ii644")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1h11w")
hframes = 6
vframes = 6

[node name="normalCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_j0hqa")

[node name="crawlCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_wmf5s")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qmt4m")
}
autoplay = "idle"

[node name="enviromentAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q156b")
}

[node name="stompSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(6.77626e-21, 12)
scale = Vector2(0.809375, 0.274391)
texture = ExtResource("8_b8dw4")
hframes = 6

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, -37)
zoom = Vector2(2.5, 2.5)
script = ExtResource("5_phs5o")

[node name="doorEffect" type="ColorRect" parent="Camera2D"]
visible = false
material = SubResource("ShaderMaterial_wjvgj")
offset_left = -194.0
offset_top = -108.0
offset_right = 192.0
offset_bottom = 108.0

[node name="ShapeCast2D" type="ShapeCast2D" parent="."]
visible = false
position = Vector2(0, 9)
scale = Vector2(0.615669, 0.762632)
shape = SubResource("RectangleShape2D_vpooe")
target_position = Vector2(0, -9.17874)
collide_with_areas = true

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(1, 9)
target_position = Vector2(11, 0)
collide_with_areas = true

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-2, 9)
target_position = Vector2(-10, 0)
collide_with_areas = true

[node name="key" parent="." instance=ExtResource("7_utnci")]
visible = false
position = Vector2(-20, 8)
activeCollision = false

[node name="LevelUI" parent="." instance=ExtResource("7_ag5j1")]
